# FilterInterface

./: CMakeLists.txt  CMakeLists4.txt  CMakeListsQt4.txt  NeonateAtlasFA.nrrd  SmoothingFilter.h  SmoothingFilter.hxx  Style.qss  Window.cpp  Window.h  main.cxx  slicer
